fix: correct project result filtering